--- a/infra/template.yaml
+++ b/infra/template.yaml
@@ -20,6 +20,8 @@ Resources:
       BucketName: ai4ngstore-dev
       VersioningConfiguration:
         Status: Enabled
+      NotificationConfiguration:
+        EventBridgeConfiguration: {} # this sends S3:ObjectCreated events to the default bus. This can be changed to a custom bus if needed in the future.
 
   AI4NGUploadLambda:
     Type: AWS::Serverless::Function
